fixed hero button on mobile. moved below video.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -272,12 +272,15 @@ header {
             }  
         }
         .button {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            margin: 0;
-            transform: translate(-50%, -50%);
-            z-index: 10;
+            margin-top: 1rem;
+            @media (min-width: $desktop) {
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                margin: 0;
+                transform: translate(-50%, -50%);
+                z-index: 10;
+            } 
         }
     }
 }
